<resources>
    <!-- App name -->
    <string name="app_name">Study App</string>

    <!-- MainActivity -->
    <string name="welcome_msg">Welcome to Study App</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Register</string>

    <!-- LoginActivity -->
    <string name="login_msg">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="loginR_button">Click here to register an account</string>

    <!-- RegisterActivity -->
    <string name="reg_msg">Register</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_button">Register</string>
    <string name="regL_button">Click here to login to your account</string>

    <!-- global buttons -->
    <string name="back_button">Back</string>

    <!-- HomeActivity -->
    <string name="home_header">Home</string>
    <string name="home_desc">Click an option below</string>
    <string name="home_todo">To-Do Lists</string>
    <string name="h_todo_desc">Add, edit, and delete items in a to-do list</string>
    <string name="home_timer">Pomodoro Timer</string>
    <string name="h_timer_desc">Use a pomodoro timer for better study sessions</string>
    <string name="logout_button">Logout</string>

    <!-- TodoActivity -->
    <string name="todo_header">To-do List</string>
    <string name="todo_desc">Add, edit and delete items</string>
    <string name="todo_add">Add</string>
    <string name="todo_edit">Edit</string>
    <string name="todo_delete">Delete</string>
    <string name="todo_new">New Item</string>

    <!-- TimerActivity -->
    <string name="timer_header">Pomodoro Timer</string>
    <string name="timer_desc">50 minutes study, 10 minutes break</string>
    <string name="timer_time">50:00</string>
    <string name="timer_start">Start timer</string>
    <string name="timer_stop">Stop timer</string>
    <string name="timer_desc2">Stopping and starting a timer will reset the timer</string>

</resources>