<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/home_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_header"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_desc"
        android:textSize="14sp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_header" />

    <Button
        android:id="@+id/home_todo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/home_todo"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_desc" />

    <TextView
        android:id="@+id/h_todo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_todo_desc"
        android:textSize="14sp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_todo" />

    <Button
        android:id="@+id/home_timer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/home_timer"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_todo_desc" />

    <TextView
        android:id="@+id/h_timer_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_timer_desc"
        android:textSize="14sp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_timer" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>