<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/todo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/todo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_desc"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_header"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/todo_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

    <ScrollView
        android:id="@+id/todo_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_desc"
        app:layout_constraintBottom_toTopOf="@id/todo_add"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/todo_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>