<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome_login"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/welcome_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/welcome_register"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/welcome_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register"
        app:layout_constraintStart_toEndOf="@+id/welcome_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>